Updates for change in `Filter` interfaces: - `FilterVisitor` and `ExpressionVisitor` removed - `IncludeFilter` and `ExcludeFilter` removed from public API - `NilExpression` removed - `Filter` as a sub-type of `java.util.Predicate` - `Expression` as a sub-type of `java.util.Function`
Implementation changes;
- Moved JTSMapping method to a `Wrapper.toGeometryType(…)` method.
- Remove some classes and methods no longer used.
- Refactor SQLMM test in a more implementation neutral (JTS versus ESRI) way.
- Initial `Optimization` support.

https://github.com/opengeospatial/geoapi/issues/32