@@ -16,175 +16,223 @@
  */
 package org.apache.sis.filter;
 
+import java.util.List;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.regex.Pattern;
 import org.apache.sis.internal.filter.Node;
 import org.apache.sis.util.ArgumentChecks;
-import org.opengis.filter.FilterVisitor;
-import org.opengis.filter.PropertyIsLike;
-import org.opengis.filter.expression.Expression;
+
+// Branch-dependent imports
+import org.opengis.filter.Filter;
+import org.opengis.filter.Expression;
+import org.opengis.filter.LikeOperator;
+
 
 /**
- * The {@value #NAME} filter.
+ * A character string comparison operator with pattern matching.
  *
  * @author  Johann Sorel (Geomatys)
- * @version 2.0
- * @since   2.0
+ * @author  Martin Desruisseaux (Geomatys)
+ * @version 1.1
+ *
+ * @param  <R>  the type of resources (e.g. {@link org.opengis.feature.Feature}) used as inputs.
+ *
+ * @since 1.1
  * @module
  */
-final class DefaultLike extends Node implements PropertyIsLike {
-
-    private final Expression expression;
-    private final String pattern;
-    private final String wildcard;
-    private final String singleChar;
-    private final String escape;
-    private final boolean matchingCase;
+final class DefaultLike<R> extends Node implements LikeOperator<R>, Optimization.OnFilter<R> {
+    /**
+     * For cross-version compatibility.
+     */
+    private static final long serialVersionUID = 4074943825474742252L;
 
     /**
-     * Cached java regular expression.
+     * The source of values to compare against the pattern.
      */
-    private Pattern regex;
+    private final Expression<? super R, ?> expression;
 
-    DefaultLike(Expression expression, String pattern, String wildcard, String singleChar, String escape, boolean matchingCase) {
+    /**
+     * The pattern to match against expression values. The {@link #wildcard}, {@link #singleChar}
+     * and {@link #escape} characters have special meanings.
+     */
+    private final String pattern;
+
+    /**
+     * The pattern character for matching any sequence of characters.
+     *
+     * @see #getWildCard()
+     */
+    private final char wildcard;
+
+    /**
+     * The pattern character for matching exactly one character.
+     *
+     * @see #getSingleChar()
+     */
+    private final char singleChar;
+
+    /**
+     * The pattern character for indicating that the next character should be matched literally.
+     *
+     * @see #getEscapeChar()
+     */
+    private final char escape;
+
+    /**
+     * Specifies how a filter expression processor should perform string comparisons.
+     *
+     * @see #isMatchingCase()
+     */
+    private final boolean isMatchingCase;
+
+    /**
+     * The regular expression.
+     */
+    private final Pattern regex;
+
+    /**
+     * Creates a new operator.
+     *
+     * @param expression      source of values to compare against the pattern.
+     * @param pattern         pattern to match against expression values.
+     * @param wildcard        pattern character for matching any sequence of characters.
+     * @param singleChar      pattern character for matching exactly one character.
+     * @param escape          pattern character for indicating that the next character should be matched literally.
+     * @param isMatchingCase  specifies how a filter expression processor should perform string comparisons.
+     */
+    DefaultLike(final Expression<? super R, ?> expression, final String pattern,
+            final char wildcard, final char singleChar, final char escape, final boolean isMatchingCase)
+    {
         ArgumentChecks.ensureNonNull("pattern", pattern);
-        ArgumentChecks.ensureNonNull("wildcard", wildcard);
-        ArgumentChecks.ensureNonNull("singleChar", singleChar);
-        ArgumentChecks.ensureNonNull("escape", escape);
-        if (wildcard.length() != 1) throw new IllegalArgumentException("WildCard string must be one character long.");
-        if (singleChar.length() != 1) throw new IllegalArgumentException("SingleChar string must be one character long.");
-        if (escape.length() != 1) throw new IllegalArgumentException("Escape string must be one character long.");
-
-        this.expression = expression;
-        this.pattern = pattern;
-        this.wildcard = wildcard;
-        this.singleChar = singleChar;
-        this.escape = escape;
-        this.matchingCase = matchingCase;
+        this.expression     = expression;
+        this.pattern        = pattern;
+        this.wildcard       = wildcard;
+        this.singleChar     = singleChar;
+        this.escape         = escape;
+        this.isMatchingCase = isMatchingCase;
+        /*
+         * Creates a regular expression from the given pattern.
+         */
+        final int n = pattern.length();
+        final StringBuilder sb = new StringBuilder(n*2);
+        for (int i=0; i<n; i++) {
+            char c = pattern.charAt(i);
+            if (c == wildcard) {
+                sb.append(".*");
+                continue;
+            } else if (c == singleChar) {
+                sb.append('.');
+                continue;
+            } else if (c == escape) {
+                if (++i >= n) break;
+                c = pattern.charAt(i);
+            }
+            if (isMetaCharacter(c)) {
+                sb.append('\\');
+            }
+            sb.append(c);
+        }
+        int flags = Pattern.CANON_EQ |          // Apply canonical decomposition before to match.
+                    Pattern.UNICODE_CASE |      // Case matching according Unicode standard instead of ASCII.
+                    Pattern.UNICODE_CHARACTER_CLASS;
+        if (!isMatchingCase) {
+            flags |= Pattern.CASE_INSENSITIVE;
+        }
+        regex = Pattern.compile(sb.toString(), flags);
     }
 
+    /**
+     * Creates a new filter of the same type but different parameters.
+     */
+    private DefaultLike(final DefaultLike<R> original, final Expression<? super R, ?> expression) {
+        this.expression     = expression;
+        this.pattern        = original.pattern;
+        this.wildcard       = original.wildcard;
+        this.singleChar     = original.singleChar;
+        this.escape         = original.escape;
+        this.isMatchingCase = original.isMatchingCase;
+        this.regex          = original.regex;
+    }
+
+    /**
+     * Creates a new filter of the same type but different parameters.
+     */
     @Override
-    public String getName() {
-        return NAME;
+    public Filter<R> recreate(final Expression<? super R, ?>[] effective) {
+        return new DefaultLike<>(this, effective[0]);
     }
 
+    /**
+     * Returns the children of this node for displaying purposes.
+     * This is used by {@link #toString()}, {@link #hashCode()} and {@link #equals(Object)} implementations.
+     */
     @Override
     protected Collection<?> getChildren() {
-        return Arrays.asList(expression);
+        // TODO: use List.of(…) in JDK9.
+        return Arrays.asList(expression, pattern);
     }
 
+    /**
+     * Returns the expression whose values will be compared by this operator, together with the pattern.
+     */
     @Override
-    public Expression getExpression() {
-        return expression;
+    public List<Expression<? super R, ?>> getExpressions() {
+        // TODO: use List.of(…) in JDK9.
+        return Arrays.asList(expression, new LeafExpression.Literal<>(pattern));
     }
 
+    /**
+     * Returns the pattern character for matching any sequence of characters.
+     * For the SQL "{@code LIKE}" operator, this property is the {@code %} character.
+     */
     @Override
-    public String getLiteral() {
-        return pattern;
-    }
-
-    @Override
-    public String getWildCard() {
+    public char getWildCard() {
         return wildcard;
     }
 
+    /**
+     * Returns the pattern character for matching exactly one character.
+     * For the SQL "{@code LIKE}" operator, this property is the {@code _} character.
+     */
     @Override
-    public String getSingleChar() {
+    public char getSingleChar() {
         return singleChar;
     }
 
+    /**
+     * Returns the pattern character for indicating that the next character should be matched literally.
+     * For the SQL "{@code LIKE}" operator, this property is the {@code '} character.
+     */
     @Override
-    public String getEscape() {
+    public char getEscapeChar() {
         return escape;
     }
 
+    /**
+     * Specifies how a filter expression processor should perform string comparisons.
+     */
     @Override
     public boolean isMatchingCase() {
-        return matchingCase;
-    }
-
-    @Override
-    public boolean evaluate(Object object) {
-        final String value = expression.evaluate(object, String.class);
-        if (value == null) return false;
-        return getPattern().matcher(value).matches();
-    }
-
-    @Override
-    public Object accept(FilterVisitor visitor, Object extraData) {
-        return visitor.visit(this, extraData);
+        return isMatchingCase;
     }
 
     /**
-     * Get or create java regex pattern.
+     * Returns {@code true} if the expression value computed from the given object matches the pattern.
      */
-    private Pattern getPattern() {
-        if (regex == null) {
-            //convert pattern to java regex
-            final StringBuilder sb = new StringBuilder();
-            if (!matchingCase) {
-                //add case insensitive
-                sb.append("(?i)");
-            }
-            final int wld = wildcard.charAt(0);
-            final int sgl = singleChar.charAt(0);
-            final int esc = escape.charAt(0);
-
-            for (int i = 0, n = pattern.length(); i < n; i++) {
-                char c = pattern.charAt(i);
-
-                //user defined special characters
-                if (wld == c) {
-                    sb.append('.');
-                    sb.append('*');
-                } else if (sgl == c) {
-                    sb.append('.');
-                } else if (esc == c) {
-                    c = pattern.charAt(++i);
-                    if (c == wld || c == sgl || c == esc) {
-                        if (isMetaCharacter(c)) {
-                            sb.append('\\');
-                        }
-                        sb.append(c);
-                    } else {
-                        throw new IllegalArgumentException("Escape character must be used only to escape wild, single and escape characters.");
-                    }
-                }
-                //java regex reserved metacharacters
-                else if (isMetaCharacter(c)) {
-                    sb.append('\\');
-                    sb.append(c);
-                }
-                //any other character
-                else {
-                    sb.append(c);
-                }
-            }
-
-            regex = Pattern.compile(sb.toString());
-        }
-        return regex;
+    @Override
+    public boolean test(final R object) {
+        final Object value = expression.apply(object);
+        return (value != null) && regex.matcher(value.toString()).matches();
     }
 
     /**
-     * Returns true if given character is a regular expression meta-character.
+     * Returns {@code true} if given character is a regular expression meta-character.
      */
-    private static boolean isMetaCharacter(char c) {
-        return c == '.'
-            || c == '*'
-            || c == '?'
-            || c == '('
-            || c == ')'
-            || c == '['
-            || c == ']'
-            || c == '{'
-            || c == '}'
-            || c == '\\'
-            || c == '^'
-            || c == '$'
-            || c == '|'
-            || c == '+';
+    static boolean isMetaCharacter(final char c) {
+        return (c == '.' || c == '?'  || c == '$') ||
+               (c >= '[' && c <= '^') ||    //  [ \ ] ^
+               (c >= '(' && c <= '+') ||    //  ( ) * +
+               (c >= '{' && c <= '}');      //  { | }
     }
-
 }
